--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
+    implementation 'commons-io:commons-io:2.14.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -32,6 +37,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation "org.flywaydb:flyway-database-postgresql"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
