Добавлена интеграция с Sonar и JaCoCo

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.5'
     id 'io.spring.dependency-management' version '1.1.6'
+    id "org.sonarqube" version "3.5.0.2730"
+    id 'jacoco'
 }
 
 group = 'ru.tpu.hostel'
@@ -21,6 +23,15 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "your_project_key" // Замените на ключ вашего проекта в SonarCloud
+        property "sonar.organization", "your_organization" // Замените на имя вашей организации
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.login", System.getenv("SONAR_TOKEN") // Используется токен из секретов GitHub
+    }
 }
 
 dependencies {
@@ -63,6 +74,21 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(Test).configureEach {
+    finalizedBy jacocoTestReport // Генерация отчета после выполнения тестов
+}
+
+jacoco {
+    toolVersion = "0.8.8" // Версия JaCoCo
+}
+
+jacocoTestReport {
+    reports {
+        xml.required.set(true) // XML-отчет для SonarCloud
+        html.required.set(true) // HTML-отчет для локального просмотра
+    }
 }
 
 jar {
