--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id "org.sonarqube" version "3.5.0.2730"
     id 'jacoco'
+    id 'checkstyle'
+    id 'com.github.spotbugs' version '5.0.13'
 }
 
 group = 'ru.tpu.hostel'
@@ -31,7 +33,21 @@ sonarqube {
         property "sonar.organization", "your_organization" // Замените на имя вашей организации
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.login", System.getenv("SONAR_TOKEN") // Используется токен из секретов GitHub
+        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.java.spotbugs.reportPaths", "${project.buildDir}/reports/spotbugs/main.xml"
+        property "sonar.coverage.exclusions", "**/*Generated*.java,**/model/*.java" // Исключения из анализа
+        property "sonar.coverage.minimum", "80" // Минимальное покрытие (в процентах)
     }
+}
+
+checkstyle {
+    toolVersion = "10.7" // Версия Checkstyle
+    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml") // Путь к конфигурации Checkstyle
+}
+
+spotbugs {
+    toolVersion = "4.7.3"
+    reportsDir = file("$buildDir/reports/spotbugs")
 }
 
 dependencies {
@@ -55,6 +71,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    spotbugs 'com.github.spotbugs:spotbugs:4.7.3'
 
     compileOnly 'org.projectlombok:lombok'
 
