Коммит с проверкой, что все работает. Попытка 54

--- a/.github/workflows/ci-sonarcloud.yml
+++ b/.github/workflows/ci-sonarcloud.yml
@@ -37,6 +37,11 @@ jobs:
       # Шаг 5: Настройка SonarCloud
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4.1.0
+        with:
+          args: >
+            -Dsonar.projectKey=hostel-service
+            -Dsonar.organization=hostel-service
+            -Dsonar.host.url=https://sonarcloud.io
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
