--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 sonarqube {
     properties {
         property "sonar.projectKey", "hostel-service" // Замените на ключ вашего проекта в SonarCloud
-        property "sonar.organization", "Hostel Service" // Замените на имя вашей организации
+        property "sonar.organization", "hostel-service" // Замените на имя вашей организации
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.login", System.getenv("SONAR_TOKEN") // Используется токен из секретов GitHub
         property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
