Коммит с проверкой, что все работает. Попытка 55

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "hostel-service" // Замените на ключ вашего проекта в SonarCloud
+        property "sonar.projectKey", "TpaBKa251_User" // Замените на ключ вашего проекта в SonarCloud
         property "sonar.organization", "hostel-service" // Замените на имя вашей организации
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.login", System.getenv("SONAR_TOKEN") // Используется токен из секретов GitHub
