Коммит с проверкой, что все работает. Попытка 57 - удалил временно билд

--- a/.github/workflows/ci-sonarcloud.yml
+++ b/.github/workflows/ci-sonarcloud.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
 
-      # Шаг 4: Сборка проекта
-      - name: Build project
-        run: ./gradlew build
+#      # Шаг 4: Сборка проекта
+#      - name: Build project
+#        run: ./gradlew build
 
       # Шаг 5: Прогон unit-тестов
       - name: Run unit tests
