Контейнеру памяти не хватает, фиксим

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,13 +7,16 @@ jwt:
   refreshTokenLifetime: 30d
 
 spring:
+  profiles:
+    active: "@activatedProperties@"
+
   jpa:
     show-sql: true
     properties:
       hibernate:
         format_sql: true
   datasource:
-    url: jdbc:postgresql://82.202.138.26:5430/hostelService
+    url: jdbc:postgresql://hostelDB:5432/hostelService
     username: hostel
     password: ilia
   flyway:
