--- a/k8s/bd-service.yaml
+++ b/k8s/bd-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hostelDB
+  name: hosteldb
 spec:
   type: ExternalName
   externalName: 82.202.138.26
