--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,9 +21,9 @@ spec:
             - containerPort: 8080
           resources:
             requests:
-              cpu: "100m"
-              memory: "128Mi"
+              cpu: "500m"
+              memory: "512Mi"
               ephemeral-storage: "0Mi"
             limits:
-              cpu: "200m"
-              memory: "256Mi"
+              cpu: "1"
+              memory: "1Gi"
