--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation "org.flywaydb:flyway-database-postgresql"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
