--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   labels:
     app: userservice
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1         # Максимально количество новых контейнеров, которые могут быть созданы во время обновления
+      maxUnavailable: 1
   selector:
     matchLabels:
       app: userservice
@@ -31,16 +36,16 @@ spec:
             httpGet:
               path: /actuator/health  # эндпоинт health для проверки состояния
               port: 8080
-            initialDelaySeconds: 600    # Задержка перед первым запросом
+            initialDelaySeconds: 300    # Задержка перед первым запросом
             periodSeconds: 60          # Интервал проверки
-            timeoutSeconds: 10          # Время ожидания ответа
+            timeoutSeconds: 30          # Время ожидания ответа
             failureThreshold: 3        # Количество неудачных попыток до перезапуска
 
           readinessProbe:
             httpGet:
               path: /actuator/health  # тот же эндпоинт для проверки готовности
               port: 8080
-            initialDelaySeconds: 300    # Задержка перед первым запросом
+            initialDelaySeconds: 120    # Задержка перед первым запросом
             periodSeconds: 20          # Интервал проверки
-            timeoutSeconds: 10         # Время ожидания ответа
+            timeoutSeconds: 30         # Время ожидания ответа
             failureThreshold: 3
