--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -9,4 +9,4 @@ spec:
     - protocol: TCP
       port: 8080         # Внутренний порт, по которому шлюз доступен в кластере
       targetPort: 8080   # Порт, на котором слушает контейнер
-  type: ClusterIP      # Так шлюз доступен только внутри кластера; внешний доступ обеспечит Ingress или NodePort
+  type: ClusterIP      # Так сервис доступен только внутри кластера; внешний доступ обеспечит Ingress или NodePort
