Сделал жесткий пайплайн

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -70,7 +70,7 @@ jobs:
 
     # Джоб для запуска приложения в Docker и повторного тестирования
   dockerized:
-    name: Run Tests in Docker
+    name: Build and run tests in Docker
     runs-on: ubuntu-latest
     needs: test
 
