--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD for Papich via SSH
+name: CI/CD for Papich
 
 on:
   push:
@@ -145,8 +145,8 @@ jobs:
           script: |
             cd User
             git pull origin master
-            kubectl apply -f k8s/deployment.yaml
-            kubectl apply -f k8s/bd-service.yaml
-            kubectl apply -f k8s/service.yaml
-            kubectl rollout restart deployment/userservice
-            kubectl rollout status deployment/userservice
+            sudo kubectl apply -f k8s/deployment.yaml
+            sudo kubectl apply -f k8s/bd-service.yaml
+            sudo kubectl apply -f k8s/service.yaml
+            sudo kubectl rollout restart deployment/userservice
+            sudo kubectl rollout status deployment/userservice
