--- a/.github/workflows/ci-sonarcloud.yml
+++ b/.github/workflows/ci-sonarcloud.yml
@@ -1,49 +1,132 @@
-name: CI with SonarCloud for Gradle
+name: CI with SonarQube
 
 on:
   pull_request:
-    branches:
-      - '**'
+    types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  # Джоб для кеширования зависимостей
+  cache:
+    name: Cache dependencies
     runs-on: ubuntu-latest
 
     steps:
-      # Шаг 1: Клонирование репозитория
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      # Шаг 2: Настройка JDK
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      # Шаг 3: Добавление прав на выполнение для gradlew
-      - name: Make gradlew executable
-        run: chmod +x gradlew
-
-#      # Шаг 4: Сборка проекта
-#      - name: Build project
-#        run: ./gradlew build
-
-      # Шаг 5: Прогон unit-тестов
-      - name: Run unit tests
-        run: ./gradlew test
-
-      # Шаг 6: Настройка SonarCloud
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v4.1.0
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
         with:
-          args: >
-            -Dsonar.projectKey=TpaBKa251_User
-            -Dsonar.organization=hostel-service
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.java.binaries=build/classes # Укажите путь к скомпилированным классам
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+
+  # Джоб для обычной сборки и тестирования
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: cache
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu'
+      - name: Build with Gradle
+        run: |
+          chmod +x gradlew
+          ./gradlew clean build   
+
+  # Джоб для обычной сборки и тестирования
+  test:
+    name: Tests
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu'
+      - name: Run tests with Gradle
+        run: |
+          chmod +x gradlew
+          ./gradlew clean test
+
+    # Джоб для запуска приложения в Docker и повторного тестирования
+  dockerized:
+    name: Build and run tests in Docker
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v4
+
+      # Устанавливаем Docker Compose
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      # Сборка проекта и запуск тестов
+      - name: Build and run tests (assemble .jar and run tests)
+        run: |
+          chmod +x gradlew
+          ./gradlew assemble  # Собираем и запускаем тесты
+
+      # Стартуем сервисы в Docker
+      - name: Build and start services in Docker
+        run: docker-compose -f docker-compose-test.yml up --build -d
+
+      # Ждем, пока контейнеры не будут готовы
+      - name: Wait for services to be healthy
+        run: |
+          echo "Waiting for services to be healthy..."
+          sleep 20
+
+      # Проверка логов контейнера
+      - name: Check if container is running
+        run: |
+          docker ps -a
+          docker logs my-app
+
+      # Запуск тестов внутри Docker
+      - name: Run tests inside Docker
+        run: docker exec my-app /app/gradlew test
+
+      # Остановка и удаление контейнеров
+      - name: Stop and remove containers
+        run: docker-compose -f docker-compose-test.yml down
+
+  # Джоб для анализа SonarQube
+  sonar_analysis:
+    name: SonarQube Analysis
+    runs-on: ubuntu-latest
+    needs: dockerized # dockerized_tests
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu'
+      - name: Build and analyze with SonarQube
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonarqube --info
