--- a/Dockerfile-local
+++ b/Dockerfile-local
@@ -1,4 +1,5 @@
 FROM openjdk:17-jdk-slim
-COPY ./build/libs/User-0.0.1-SNAPSHOT.jar /opt/service.jar
+WORKDIR /app
+COPY . .
 EXPOSE 8080
-CMD ["java", "-Dspring.profiles.active=docker", "-jar", "/opt/service.jar"]
+CMD ["java", "-Dspring.profiles.active=docker", "-jar", "/app/build/libs/User-0.0.1-SNAPSHOT.jar"]
