--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -44,6 +44,9 @@ jobs:
           java-version: 17
           distribution: 'zulu'
       - name: Build with Gradle
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
           ./gradlew clean build   
@@ -64,6 +67,9 @@ jobs:
           java-version: 17
           distribution: 'zulu'
       - name: Run tests with Gradle
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
           ./gradlew clean test
@@ -85,12 +91,18 @@ jobs:
 
       # Сборка проекта и запуск тестов
       - name: Build and run tests (assemble .jar and run tests)
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
           ./gradlew assemble  # Собираем и запускаем тесты
 
       # Стартуем сервисы в Docker
       - name: Build and start services in Docker
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: docker-compose -f docker-compose-test.yml up --build -d
 
       # Ждем, пока контейнеры не будут готовы
@@ -131,6 +143,8 @@ jobs:
       - name: Build and analyze with SonarQube
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
           ./gradlew build sonarqube --info
@@ -152,9 +166,17 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build and Push Docker Image
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           IMAGE=ghcr.io/tpabka251/userservice
-          docker build -t $IMAGE:latest -t $IMAGE:${{ github.sha }} .
+          docker build \
+            --build-arg INTERNAL_REPO_LOGIN=${INTERNAL_REPO_LOGIN} \
+            --build-arg INTERNAL_REPO_PASSWORD=${INTERNAL_REPO_PASSWORD} \
+            -t $IMAGE:latest \
+            -t $IMAGE:${{ github.sha }} \
+            .
           docker push $IMAGE:latest
           docker push $IMAGE:${{ github.sha }}
 
