--- a/Dockerfile-local
+++ b/Dockerfile-local
@@ -1,5 +1,9 @@
 FROM openjdk:17-jdk-slim
 WORKDIR /app
 COPY . .
+ARG INTERNAL_REPO_LOGIN
+ARG INTERNAL_REPO_PASSWORD
+ENV INTERNAL_REPO_LOGIN=$INTERNAL_REPO_LOGIN
+ENV INTERNAL_REPO_PASSWORD=$INTERNAL_REPO_PASSWORD
 EXPOSE 8080
 CMD ["java", "-Dspring.profiles.active=docker", "-jar", "/app/build/libs/User-0.0.1-SNAPSHOT.jar"]
