--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,21 +10,39 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: health, prometheus, info, beans, trace
+  endpoint:
+    health:
+      show-details: always
+  tracing:
+    enabled: true
+
+logging:
+  level:
+    org.hibernate: OFF
 
 spring:
+  application:
+    name: user-service
   profiles:
     active: "@activatedProperties@"
 
   jpa:
-    show-sql: true
+    hibernate:
+      ddl-auto: validate
     properties:
       hibernate:
-        format_sql: true
+        jdbc:
+          batch_size: 50
+          order_inserts: true
+          order_updates: true
+        generate_statistics: false
+
   datasource:
     url: jdbc:postgresql://hostelDB:5432/hostelService
     username: hostel
     password: ilia
+
   flyway:
     jdbc-properties:
       enabled: true
@@ -32,6 +50,18 @@ spring:
         - db.migration
     schemas: user
 
+  cloud:
+    openfeign:
+      micrometer:
+        enabled: true
+
 springdoc:
   swagger-ui:
     enabled: true
+
+otlp:
+  tracing:
+    export-enabled: true
+    endpoint: http://tempo:4317
+    timeout: 5000
+    service-name: user-service
