--- a/build.gradle
+++ b/build.gradle
@@ -58,13 +58,14 @@ dependencies {
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
-    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.3")
     implementation 'commons-io:commons-io:2.14.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.springframework.retry:spring-retry:2.0.10'
     runtimeOnly 'org.postgresql:postgresql'
     implementation "org.flywaydb:flyway-database-postgresql"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
