Небольшой общий рефакторинг

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -9,3 +9,7 @@ otlp:
   tracing:
     export-enabled: false
     endpoint: http://localhost:4317
+
+rest:
+  base-url:
+    admin-service: http://localhost:8083
