Новая версия либы

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,6 +1,10 @@
 server:
   port: 8081
 
+jwt:
+  accessTokenLifetime: 36500d
+  refreshTokenLifetime: 365000d
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5430/hostelService
