--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,13 @@ sonarqube {
     }
 }
 
+ext {
+    set('internalLibraryVersion', "1.2.2")
+}
+
 dependencies {
-    implementation 'ru.tpu.hostel:hostel-core:1.1.1'
-    implementation 'ru.tpu.hostel:hostel-feign:1.1.1'
+    implementation "ru.tpu.hostel:hostel-core:${internalLibraryVersion}"
+    implementation "ru.tpu.hostel:hostel-feign:${internalLibraryVersion}"
 
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
