Правки + добавил отправку сообщения через Rabbit в уведомления об изменении ролей

--- a/build.gradle
+++ b/build.gradle
@@ -52,12 +52,14 @@ sonarqube {
 }
 
 ext {
-    set('internalLibraryVersion', "1.2.2")
+    set('internalLibraryVersion', "1.3.2")
 }
 
 dependencies {
     implementation "ru.tpu.hostel:hostel-core:${internalLibraryVersion}"
     implementation "ru.tpu.hostel:hostel-feign:${internalLibraryVersion}"
+    implementation "ru.tpu.hostel:hostel-amqp:${internalLibraryVersion}"
+    implementation "ru.tpu.hostel:notification:${internalLibraryVersion}"
 
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
@@ -74,6 +76,7 @@ dependencies {
     implementation "org.flywaydb:flyway-database-postgresql"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-tracing-bridge-otel'
     implementation 'io.micrometer:micrometer-registry-prometheus'
