Добавил эндпоинт на добавление ссылок на вк и тг. Изменил пайплайн, стратегию развертывания

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -6,10 +6,7 @@ metadata:
     app: userservice
 spec:
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1         # Максимально количество новых контейнеров, которые могут быть созданы во время обновления
-      maxUnavailable: 0
+    type: Recreate
   selector:
     matchLabels:
       app: userservice
