--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,7 +6,6 @@ on:
       - master
 
 jobs:
-  # Джоб для кеширования зависимостей
   cache:
     name: Cache dependencies
     runs-on: ubuntu-latest
@@ -28,117 +27,84 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
 
-  # Джоб для обычной сборки и тестирования
   build:
-    name: Build
+    name: Build and Tests
     runs-on: ubuntu-latest
     needs: cache
-
+    outputs:
+      jar-path: ${{ steps.upload.outputs.artifact-path || '' }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: 17
+          java-version: 21
           distribution: 'zulu'
+
       - name: Build with Gradle
         env:
           INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
-          ./gradlew clean build   
+          ./gradlew clean build
 
-  # Джоб для обычной сборки и тестирования
-  test:
-    name: Tests
+      - name: Upload built jar as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: build/libs/*.jar
+
+  dockerized:
+    name: Build and run in Docker
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download built jar from build job
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'zulu'
-      - name: Run tests with Gradle
-        env:
-          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
-          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: |
-          chmod +x gradlew
-          ./gradlew clean test
+          name: app-jar
+          path: ./build/libs
 
-    # Джоб для запуска приложения в Docker и повторного тестирования
-  dockerized:
-    name: Build and run tests in Docker
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - uses: actions/checkout@v4
-
-      # Устанавливаем Docker Compose
       - name: Set up Docker Compose
         run: |
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      # Сборка проекта и запуск тестов
-      - name: Build and run tests (assemble .jar and run tests)
-        env:
-          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
-          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: |
-          chmod +x gradlew
-          ./gradlew assemble  # Собираем и запускаем тесты
-
-      # Стартуем сервисы в Docker
-      - name: Build and start services in Docker
+      - name: Build Docker image (single build)
         env:
           INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: docker-compose -f docker-compose-test.yml up --build -d
 
-      # Ждем, пока контейнеры не будут готовы
       - name: Wait for services to be healthy
         run: |
           echo "Waiting for services to be healthy..."
           sleep 20
-
-      # Проверка логов контейнера
-      - name: Check if container is running
-        run: |
           docker ps -a
-          docker logs my-app
+          docker logs my-app || true
 
-      # Запуск тестов внутри Docker
-      - name: Run tests inside Docker
-        run: docker exec my-app /app/gradlew test
-
-      # Остановка и удаление контейнеров
       - name: Stop and remove containers
         run: docker-compose -f docker-compose-test.yml down
 
-  # Джоб для анализа SonarQube
   sonar_analysis:
     name: SonarQube Analysis
     runs-on: ubuntu-latest
     needs: dockerized
-
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: 17
+          java-version: 21
           distribution: 'zulu'
       - name: Build and analyze with SonarQube
         env:
@@ -148,7 +114,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build sonarqube --info
-    continue-on-error: true # <-- Ошибки не ломают CI/CD
+    continue-on-error: true
 
   deploy:
     name: Deploy on Prod
@@ -164,6 +130,12 @@ jobs:
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
+      - name: Download built jar from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+          path: ./build/libs
 
       - name: Build and Push Docker Image
         env:
@@ -183,15 +155,15 @@ jobs:
       - name: Deploy to k3s via SSH
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}            # IP или домен сервера
-          username: ${{ secrets.SSH_USER }}          # пользователь для SSH
-          key: ${{ secrets.SSH_PRIVATE_KEY }}        # приватный ключ (с кодовой фразой)
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}    # кодовая фраза к ключу
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd User
             git pull origin master
             sudo kubectl apply -f k8s/deployment.yaml
-            sudo kubectl apply -f k8s/bd-service.yaml
             sudo kubectl apply -f k8s/service.yaml
             sudo kubectl rollout restart deployment/userservice
             sudo kubectl rollout status deployment/userservice
