--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -1,10 +1,14 @@
-FROM openjdk:17-jdk-slim
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
-COPY . .
+
+ARG JAR_FILE=build/libs/*.jar
+COPY ${JAR_FILE} app.jar
+
 ARG INTERNAL_REPO_LOGIN
 ARG INTERNAL_REPO_PASSWORD
 ENV INTERNAL_REPO_LOGIN=$INTERNAL_REPO_LOGIN
 ENV INTERNAL_REPO_PASSWORD=$INTERNAL_REPO_PASSWORD
-RUN chmod +x gradlew && ./gradlew assemble
+
+#RUN chmod +x gradlew && ./gradlew assemble
 EXPOSE 8080
-CMD ["java", "-Dspring.profiles.active=docker", "-jar", "/app/build/libs/User-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-Dspring.profiles.active=docker", "-jar", "/app/app.jar"]
