Доработал добавление ссылок, улучшил спецификацию АПИ

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -21,3 +21,27 @@ otlp:
 rest:
   base-url:
     admin-service: http://localhost:8083
+
+springdoc:
+  api-docs:
+    path: /api-docs
+    version: OPENAPI_3_1
+    enabled: true
+
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    operationsSorter: >
+      function(a, b) {
+        const methodOrder = {
+          'get': '3', 'post': '0', 'put': '1', 
+          'patch': '2', 'delete': '4', 'head': '5', 
+          'options': '6', 'trace': '7'
+        };
+        return methodOrder[b.get("method")].localeCompare(methodOrder[a.get("method")]);
+      }
+    tags-sorter: none
+    display-request-duration: true
