--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -94,26 +94,39 @@ jobs:
         run: docker-compose -f docker-compose-test.yml down
 
   sonar_analysis:
-    name: SonarQube Analysis
+    name: Build and analyze
     runs-on: ubuntu-latest
-    needs: dockerized
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
-          distribution: 'zulu'
-      - name: Build and analyze with SonarQube
+          distribution: 'zulu' # Alternative distribution options are available
+
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+
+      - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: |
-          chmod +x gradlew
-          ./gradlew build sonarqube --info
+        run: ./gradlew build sonar --info
     continue-on-error: true
 
   deploy:
