--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,6 +9,8 @@ on:
       - '**/README.md'
       - '**/.gitignore'
       - '**/.gitattributes'
+      - '**/.github/workflows/ci-sonarcloud.yml'
+      - '**/.github/workflows/update-api.yml'
 
 jobs:
   cache:
