--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -26,6 +26,19 @@ jobs:
           --health-retries 5
         ports:
           - 5430:5432
+      rabbitmq:
+        image: rabbitmq:4.1.0-management
+        ports:
+          - "5672:5672"  # Порт для общения с микросервисами
+          - "15672:15672" # Web UI для управления RabbitMQ
+        volumes:
+          - ./config/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
+          - ./config/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+        options: >-
+          --health-cmd rabbitmq-diagnostics -q ping
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - uses: actions/checkout@v4
