--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -35,7 +35,7 @@ jobs:
           - ./config/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
           - ./config/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
         options: >-
-          --health-cmd rabbitmq-diagnostics -q ping
+          --health-cmd "rabbitmqctl status"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
