--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -26,22 +26,17 @@ jobs:
           --health-retries 5
         ports:
           - 5430:5432
-      rabbitmq:
-        image: rabbitmq:4.1.0-management
-        ports:
-          - "5672:5672"  # Порт для общения с микросервисами
-          - "15672:15672" # Web UI для управления RabbitMQ
-        volumes:
-          - ./config/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
-          - ./config/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-        options: >-
-          --health-cmd "rabbitmqctl status"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Build DB and RabbitMQ
+        run: docker-compose -f docker-compose.yml up --build -d rabbitmq
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -89,6 +84,9 @@ jobs:
           # Останавливаем приложение
           kill $APP_PID || true
           wait $APP_PID || true
+
+      - name: Stop and remove containers
+        run: docker-compose -f docker-compose.yml down
 
       - name: Update OpenAPI file
         run: |
