--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -35,8 +35,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Build DB and RabbitMQ
-        run: docker-compose -f docker-compose.yml up --build -d rabbitmq
+      - name: Build RabbitMQ
+        run: docker-compose -f docker-compose-api.yml up --build -d rabbitmq
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
