--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -101,10 +101,16 @@ jobs:
 
       - name: Commit and push if changed
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add api/User-openapi.yaml
-          git diff --staged --quiet || git commit -m "chore: update OpenAPI specification"
-          git push
+          
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: auto-update OpenAPI specification"
+            # Используем PAT для пуша
+            git push https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git HEAD:master
+          fi
