--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -99,9 +99,12 @@ jobs:
             exit 1
           fi
 
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+
       - name: Commit and push if changed
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -111,6 +114,5 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "chore: auto-update OpenAPI specification"
-            # Используем PAT для пуша
-            git push https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git HEAD:master
+            git push
           fi
