--- a/docker-compose-api.yml
+++ b/docker-compose-api.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "5430:5432"
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: [ "CMD", "pg_isready -U hostel" ]
       interval: 10s
       timeout: 5s
       retries: 5
