--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -34,8 +34,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Start RabbitMQ
-        run: docker-compose -f docker-compose-api.yml up
+      - name: Start DB and RabbitMQ
+        run: docker-compose -f docker-compose-api.yml up --build -d
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -49,7 +49,7 @@ jobs:
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
-          ./gradlew clean build -x test
+          ./gradlew clean assemble
 
       - name: Start application and get OpenAPI spec
         env:
