--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -19,6 +19,16 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 0
 
+      - name: Cache Docker images
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.docker/cache
+            /tmp/docker-cache
+          key: ${{ runner.os }}-docker-images-${{ hashFiles('docker-compose-api.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-images-
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -29,27 +39,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
       - name: Start DB and RabbitMQ
-        run: docker-compose -f docker-compose-api.yml up --build -d
+        run: |
+          docker-compose -f docker-compose-api.yml pull --quiet
+          docker-compose -f docker-compose-api.yml up -d
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: 'zulu'
-
-      - name: Build application
-        env:
-          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
-          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: |
-          chmod +x gradlew
-          ./gradlew clean assemble
+          cache: gradle
 
       - name: Start application and get OpenAPI spec
         env:
@@ -61,18 +61,17 @@ jobs:
           APP_PID=$!
           
           echo "Waiting for application to start..."
-          for i in {1..30}; do
+          for i in {1..15}; do
             if curl -f http://localhost:8081/actuator/health > /dev/null 2>&1; then
               echo "Application started successfully"
               break
             fi
-            sleep 5
-            echo "Waiting... attempt $i/30"
+            sleep 3
+            echo "Waiting... attempt $i/15"
           done
           
           if ! curl -f http://localhost:8081/actuator/health; then
-            echo "Application failed to start within 150 seconds"
-            docker-compose -f docker-compose-api.yml logs rabbitmq || true
+            echo "Application failed to start within 45 seconds"
             exit 1
           fi
           
@@ -91,10 +90,6 @@ jobs:
             mkdir -p api
             mv openapi-temp.yaml api/User-openapi.yaml
             echo "OpenAPI spec updated"
-          
-            echo "=== DIFF ==="
-            git diff api/User-openapi.yaml || true
-            echo "============="
           else
             echo "Failed to download OpenAPI spec"
             exit 1
@@ -112,7 +107,5 @@ jobs:
             git push
             echo "Changes pushed successfully"
           else
-            echo "No changes to commit in OpenAPI spec"
-            echo "=== Current file content ==="
-            head -20 api/User-openapi.yaml || true
+            echo "No changes to commit"
           fi
