--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -19,11 +19,6 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 0
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose    
-
       - name: Cache Docker images
         uses: actions/cache@v4
         with:
@@ -44,10 +39,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Set up Docker Compose
+        uses: docker/setup-buildx-action@v3
+
       - name: Start DB and RabbitMQ
         run: |
-          docker-compose -f docker-compose-api.yml pull --quiet
-          docker-compose -f docker-compose-api.yml up -d
+          docker compose -f docker-compose-api.yml pull --quiet
+          docker compose -f docker-compose-api.yml up -d
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
